General environment update with more volumes and configuration.