@@ -5,7 +5,7 @@ Easy to use and clean docker image for running paper spigot servers in docker co
 # Getting started
 The easiest way for a quick start would be:
 ```
-docker run -it -v ~/server:/data felixklauke/paperspigot:1.12.2
+docker run -it felixklauke/paperspigot:1.12.2
 ```
 
 # Tags and Versions
@@ -19,26 +19,30 @@ The docker images are tagged for their minecraft versions. Therefor you can curr
 
 # Run arguments
 You can give three kind of environment parameters to configure how the server is actually run. These are
-- JAVA_ARGS (default: "-Xmx2G")
-- SPIGOT_ARGS (default: "")
-- PAPERSPIGOT_ARGS (default: "")
+- JAVA_ARGS (default: "-Xmx2G -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -server -Dcom.mojang.eula.agree=true")
+- SPIGOT_ARGS (default: "--bukkit-settings ${CONFIG_PATH}/bukkit.yml --plugins ${PLUGINS_PATH} --world-dir ${WORLDS_PATH} --spigot-settings ${CONFIG_PATH}/spigot.yml --commands-settings ${CONFIG_PATH}/commands.yml --config ${CONFIG_PATH}/server.properties")
+- PAPERSPIGOT_ARGS (default: "--paper-settings ${CONFIG_PATH}/paper.yml")
 
 # Volumes
-The containers main volume is located at `/data`. Therefor you can mount your server folder easily by
-```
--v ~/server:/data
-```
+There are three volumes used for:
+- Worlds
+- Plugins
+- Config files (paper.yml, bukkit.yml, spigot.yml, server.properties, commands.yml)
+
+You can find the mount locations in the `docker-compose.yml`
 
 # docker-compose.yml
 You can add this simple entry to your docker-compose.yml:
 ```
 version: '3'  
-services: 
+services:
   minecraft:
-    image: felixklauke/paperspigot
+    image: felixklauke/paperspigot:1.12.2
     restart: always
     ports:
       - 25565:25565
     volumes:
-      - /srv/minecraft:/data
+      - ./config:/opt/minecraft/config
+      - ./worlds:/opt/minecraft/worlds
+      - ./plugins:/opt/minecraft/plugins
 ```
